chore: minor cleanup

--- a/src/components/FixedFooter.astro
+++ b/src/components/FixedFooter.astro
@@ -20,7 +20,7 @@ import {THEME_LABELS} from "../config/themes";
   </div>
 </footer>
 
-<script define:vars={{THEME_LABELS}}>
+<script is:inline define:vars={{THEME_LABELS}}>
   window.__themeLabels = THEME_LABELS;
 </script>
 
