--- a/src/layouts/Post.astro
+++ b/src/layouts/Post.astro
@@ -8,7 +8,7 @@
 
 import type {CollectionEntry} from "astro:content";
 
-import JsonLd from "../components/JsonLd.astro";
+import JSONLD from "../components/JSONLD.astro";
 import SheenText from "../components/SheenText.astro";
 import {formatDate, formatUpdatedDate} from "../utils/format-date";
 
@@ -34,7 +34,7 @@ const {title, description, publishDate, updatedDate, tags} = post.data;
   updatedDate={updatedDate}
   tags={tags}
 >
-  <JsonLd
+  <JSONLD
     type="Article"
     article={{
       headline: title,
