refactor: HTML bleed fix for safari

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -121,6 +121,9 @@
   html {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    min-height: 100vh;
+    background-color: var(--bg);
+    transition: background var(--transition-slow);
   }
 
   ul,
