--- a/src/components/SEO.astro
+++ b/src/components/SEO.astro
@@ -11,13 +11,14 @@
  */
 
 import {OG_DEFAULT_PATH, SITE} from "../config";
+import type {OGType} from "../types";
 
 interface Props {
   title: string;
   description?: string;
   canonicalUrl?: string;
   ogImage?: string;
-  ogType?: "website" | "article";
+  ogType?: OGType;
   publishDate?: Date;
   updatedDate?: Date;
   tags?: string[];
