refactor: SSOT for SEO concerns

--- a/src/components/SEO.astro
+++ b/src/components/SEO.astro
@@ -10,7 +10,8 @@
  * - RSS feed discovery
  */
 
-import {OG_DEFAULT_PATH, SITE} from "../config";
+import {SITE} from "../config";
+import {OG_DEFAULT_PATH} from "../lib/og";
 import type {OGType} from "../types";
 
 interface Props {
