--- a/src/layouts/Post.astro
+++ b/src/layouts/Post.astro
@@ -71,6 +71,6 @@ const {title, description, publishDate, updatedDate, tags} = post.data;
 <script>
   import "../scripts/code-copy.ts";
   import "../scripts/heading-anchors.ts";
-  import "../scripts/sheen-headings.ts";
-  import "../scripts/sheen-links.ts";
+  import "../scripts/sheen/headings.ts";
+  import "../scripts/sheen/links.ts";
 </script>
